<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- 搜索 -->
    <item
        android:id="@+id/action_search"
        android:title="@string/search_books_hint"
        android:icon="@drawable/ic_search_24"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <!-- 设置 -->
    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_settings_24"
        app:showAsAction="never" />

    <!-- 关于 -->
    <item
        android:id="@+id/action_about"
        android:title="@string/menu_about"
        android:icon="@drawable/ic_info_24"
        app:showAsAction="never" />

</menu> 